--- a/SampleNewsApp/Cell/NewsTableViewCell.xib
+++ b/SampleNewsApp/Cell/NewsTableViewCell.xib
@@ -10,21 +10,28 @@
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner" customClass="NewsViewController" customModule="SampleNewsApp" customModuleProvider="target"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
-        <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" reuseIdentifier="cell" rowHeight="240" id="KGk-i7-Jjw" customClass="NewsTableViewCell" customModule="SampleNewsApp" customModuleProvider="target">
-            <rect key="frame" x="0.0" y="0.0" width="320" height="240"/>
+        <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" reuseIdentifier="cell" rowHeight="300" id="KGk-i7-Jjw" customClass="NewsTableViewCell" customModule="SampleNewsApp" customModuleProvider="target">
+            <rect key="frame" x="0.0" y="0.0" width="320" height="300"/>
             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
             <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="KGk-i7-Jjw" id="H2p-sc-9uM">
-                <rect key="frame" x="0.0" y="0.0" width="320" height="240"/>
+                <rect key="frame" x="0.0" y="0.0" width="320" height="300"/>
                 <autoresizingMask key="autoresizingMask"/>
                 <subviews>
-                    <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="pEy-La-3Q8">
-                        <rect key="frame" x="0.0" y="0.0" width="320" height="160"/>
+                    <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" misplaced="YES" translatesAutoresizingMaskIntoConstraints="NO" id="pEy-La-3Q8">
+                        <rect key="frame" x="0.0" y="0.0" width="320" height="180"/>
                     </imageView>
-                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" id="IN9-yY-M7N">
-                        <rect key="frame" x="10" y="168" width="302" height="54"/>
-                        <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                        <fontDescription key="fontDescription" type="system" pointSize="24"/>
+                    <label opaque="NO" userInteractionEnabled="NO" contentMode="top" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" lineBreakMode="wordWrap" numberOfLines="0" baselineAdjustment="alignBaselines" minimumScaleFactor="0.5" adjustsFontForContentSizeCategory="YES" id="IN9-yY-M7N">
+                        <rect key="frame" x="9" y="185" width="302" height="75"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" flexibleMaxY="YES"/>
+                        <fontDescription key="fontDescription" type="boldSystem" pointSize="24"/>
                         <nil key="textColor"/>
+                        <nil key="highlightedColor"/>
+                    </label>
+                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" id="HOr-6T-a1c">
+                        <rect key="frame" x="9" y="262" width="302" height="21"/>
+                        <autoresizingMask key="autoresizingMask" flexibleMaxY="YES"/>
+                        <fontDescription key="fontDescription" type="system" pointSize="15"/>
+                        <color key="textColor" systemColor="systemGray2Color"/>
                         <nil key="highlightedColor"/>
                     </label>
                 </subviews>
@@ -32,21 +39,22 @@
                     <constraint firstItem="pEy-La-3Q8" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="top" id="COx-q8-E2L"/>
                     <constraint firstAttribute="trailing" secondItem="pEy-La-3Q8" secondAttribute="trailing" id="Hxf-dg-dZH"/>
                     <constraint firstItem="pEy-La-3Q8" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" id="IIO-6e-SIZ"/>
-                    <constraint firstItem="IN9-yY-M7N" firstAttribute="top" secondItem="pEy-La-3Q8" secondAttribute="bottom" constant="8" id="PCi-me-XG9"/>
+                    <constraint firstItem="IN9-yY-M7N" firstAttribute="top" secondItem="pEy-La-3Q8" secondAttribute="bottom" constant="4" id="PCi-me-XG9"/>
+                    <constraint firstItem="HOr-6T-a1c" firstAttribute="top" secondItem="IN9-yY-M7N" secondAttribute="bottom" constant="2" id="olp-OC-ibE"/>
                 </constraints>
             </tableViewCellContentView>
             <viewLayoutGuide key="safeArea" id="njF-e1-oar"/>
-            <color key="backgroundColor" systemColor="systemRedColor"/>
             <connections>
                 <outlet property="newsImage" destination="pEy-La-3Q8" id="xuT-tN-CQ7"/>
+                <outlet property="newsSubtitle" destination="HOr-6T-a1c" id="5k5-jZ-vp6"/>
                 <outlet property="newsTitle" destination="IN9-yY-M7N" id="dx2-cM-keL"/>
             </connections>
-            <point key="canvasLocation" x="81" y="179"/>
+            <point key="canvasLocation" x="79.710144927536234" y="204.91071428571428"/>
         </tableViewCell>
     </objects>
     <resources>
-        <systemColor name="systemRedColor">
-            <color red="1" green="0.23137254901960785" blue="0.18823529411764706" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+        <systemColor name="systemGray2Color">
+            <color red="0.68235294117647061" green="0.68235294117647061" blue="0.69803921568627447" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
         </systemColor>
     </resources>
 </document>
